# ftp

./: CMakeLists.txt  README.md  example.c  ft_main.c  ftd.c  ftd.h  ftd_main.c  mftd.h  mpftd.c  mtftd.c  proto.h
lib/: connectsock.c  passivesock.c
mprcp/: CMakeLists.txt  ftp.c  mpftpd.c  proto.h
root_examples/: TCPdaytime.c  TCPechod.c  client.c
